--- a/COMP461805-计算机组成原理/课程介绍.md
+++ b/COMP461805-计算机组成原理/课程介绍.md
@@ -7,6 +7,7 @@
 
 总结：如果不做流水线，通过添加指令来多获得的分数在*0.15后还不够四舍五入的，是真正意义上的白写。
 并且根据给分猜测，实验报告随便写点字就行，因为分数波动空间非常低。
+即：想要高分必做流水线，不做流水线就不用添加指令（只增加一两分）。
 
 期末考试：24年考的很原，基本是课后习题，但是23年考的很奇特，需要揣摩意图。
 同时克旺本人在实验课上声称今年考的太简单了，未来难度难以预测。
